<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.support.android.i2irebuild.SignInActivity">

    <include
        android:id="@+id/toolbarSignIn"
        layout="@layout/toolbar_sign_in" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarSignIn"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dip"
            />
        <TextView
            android:id="@+id/separator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_in_button"
            android:layout_marginTop="@dimen/TopMargin16"
            android:gravity="center"
            android:text="@string/separator"


            />

        <EditText
            android:id="@+id/signIn_email_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/separator"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            />
        <EditText
            android:id="@+id/signIn_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signIn_email_address"
            android:layout_marginTop="@dimen/TopMargin16"
            android:hint="@string/password_hint"
            android:inputType="textPassword"

            />
        <Button
            android:id="@+id/signInActiviy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/abc_action_button_min_height_material"
            android:layout_below="@id/signIn_password"
            android:layout_marginTop="@dimen/TopMargin32"
            android:onClick="signIn"
            android:text="@string/button_signIn"
            />

    </RelativeLayout>
</RelativeLayout>
